--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/LambdaSchool/node-api3-project#readme",
   "dependencies": {
+    "cors-anywhere": "^0.4.3",
+    "cors-proxy": "^1.0.3",
     "dotenv": "^8.2.0",
     "env": "0.0.2",
     "express": "^4.17.1",
